[gd_scene load_steps=4 format=3 uid="uid://oh8gi3dswlng"]

[ext_resource type="Script" path="res://commons/table/table.gd" id="1_n53t1"]
[ext_resource type="Texture2D" uid="uid://bpd4ntvin2v3c" path="res://commons/table/sprite/table.jpg" id="2_g2w5y"]
[ext_resource type="Texture2D" uid="uid://bkka0y0w6i63r" path="res://commons/pot/sprite/pot.png" id="3_q7cxr"]

[node name="Table" type="Node2D"]
script = ExtResource("1_n53t1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 141)
texture = ExtResource("2_g2w5y")

[node name="Pot1" type="Marker2D" parent="."]
editor_description = "Used as position for the flowers, which will be their children"
position = Vector2(-165, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pot1"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_q7cxr")

[node name="Pot2" type="Marker2D" parent="."]
editor_description = "Used as position for the flowers, which will be their children"

[node name="Sprite2D" type="Sprite2D" parent="Pot2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_q7cxr")

[node name="Pot3" type="Marker2D" parent="."]
editor_description = "Used as position for the flowers, which will be their children"
position = Vector2(179, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pot3"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_q7cxr")
